Restructure(OLD) to New with Folder Name

--- a/Array/index.html
+++ b/Array/index.html
@@ -8,5 +8,5 @@
 <body>
     <center><h6>PRACTICE GOING ON</h6></center>
 </body>
-<script src="stringPrac1.js"></script>
+<script src="arrayPrac1.js"></script>
 </html>
