--- a/Function/index.html
+++ b/Function/index.html
@@ -6,5 +6,5 @@
     <title>Document</title>
   </head>
   <body></body>
-  <script src="functionEx4_1.js"></script>
+  <script src="functionEx7.js"></script>
 </html>
