--- a/DOM/Lecture-2/index.html
+++ b/DOM/Lecture-2/index.html
@@ -7,8 +7,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>DOM</h1>
-
+    <p class="para">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Pariatur dignissimos totam vero est repudiandae, adipisci molestiae sit dolore quidem commodi inventore aperiam maxime fugit recusandae consectetur voluptatem amet a laudantium.</p>
     <script src="script.js"></script>
 </body>
 </html>
